feat: deploy to u2u solaris mainnet

--- a/IU2U-Technical-Documentation.html
+++ b/IU2U-Technical-Documentation.html
@@ -719,6 +719,13 @@
 <td>U2U ↔ IU2U conversion</td>
 </tr>
 <tr>
+<tr>
+<td>U2U Solaris Mainnet</td>
+<td>39</td>
+<td>✅ Native</td>
+<td>U2U ↔ IU2U conversion</td>
+</tr>
+<tr>
 <td>Ethereum</td>
 <td>1</td>
 <td>✅ Live</td>
